# advent-of-code-2025

./: pyproject.toml
src/aoc_2025/: day1_math.py  day1_oop.py  day2.py
tests/: test_day1_math.py  test_day2.py
